--- a/templates/home.html
+++ b/templates/home.html
@@ -77,8 +77,8 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href=" {% static 'index.html#about' %} ">Get Started</a>
-
+      <a class="btn-getstarted" href="{% url 'index' %}">Add</a>
+      <a class="btn-getstarted" href="{% url 'read' %}">View</a>
     </div>
   </header>
 
@@ -93,8 +93,8 @@
 
         <div class="row justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
           <div class="col-xl-6 col-lg-8">
-            <h2>Powerful Digital Solutions With GP<span>.</span></h2>
-            <p>We are team of talented digital marketers</p>
+            <h2>To Do App<span>.</span></h2>
+<!--            <p>We are team of talented digital marketers</p>-->
           </div>
         </div>
 
