--- a/templates/update.html
+++ b/templates/update.html
@@ -1,15 +1,11 @@
-
-
 {% extends 'base.html' %}
-
-{%load crispy_forms_tags %}
 
 {% block content %}
   <form method="POST">
 
                             {% csrf_token %}
 
-                                    {{form|crispy}}
+                                    {{form}}
                        <button type="submit">click here</button>
                       </form>
 {% endblock %}
